fixed error with overlapping css

--- a/lol-tracker/src/css/About.css
+++ b/lol-tracker/src/css/About.css
@@ -35,7 +35,7 @@ section {
     margin: 80px;
 }
 
-p {
+.about-plain {
     color: #666;
     line-height: 1.6;
 }
